Update MAVEN_OPTS in Jenkinsfile
Removed deprecated MaxPermSize from MAVEN_OPTS.